# air-data

./: .aiignore  .gitignore  README.md  justfile  pyproject.toml
.air/: settings.json
.air/rules/: rules-file.mdc
.junie/: guidelines.md
src/air_data/: cli.py  main.py  stackoverflow_analyzer.py
src/air_data/so_data/: so_2024_raw_schema.csv  so_2024_sample.csv
tests/: conftest.py  test_cli.py  test_stackoverflow_analyzer.py
