[project]
name = "air-data"
version = "1.0.0"
description = "Air data - research project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["duckdb>=1.3.1"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "ipdb>=0.13.13",
    "ipython>=9.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/air_data"]
