[project]
name = "air-data"
version = "1.0.0"
description = "Air data - research project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.1",
 "pandas>=2.0.0",
 "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "ipdb>=0.13.13",
    "ipython>=9.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/air_data"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false  
reportUnknownArgumentType = false
reportAny = false
reportMissingParameterType = "warning"
reportUntypedFunctionDecorator = false
